# megalodon-rs

./: .tool-versions  Cargo.toml  LICENSE.txt  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  example.yml  release.yml
examples/: authorization.rs  detector.rs  firefish_authorization.rs  firefish_credentials.rs  firefish_custom_emojis.rs  firefish_favourite.rs  firefish_home.rs  firefish_instance.rs  firefish_media.rs  firefish_notifications.rs  firefish_post_with_media.rs  firefish_search.rs  firefish_streaming.rs  friendica_authorization.rs  friendica_credentials.rs  friendica_favourite.rs  friendica_follow_requests.rs  friendica_home.rs  friendica_instance.rs  friendica_marker.rs  friendica_media.rs  friendica_post_with_media.rs  friendica_post_with_schedule.rs  friendica_reblog.rs  friendica_relationship.rs  gotosocial_authorization.rs  gotosocial_credentials.rs  gotosocial_home.rs  gotosocial_instance.rs  gotosocial_post.rs  gotosocial_streaming.rs  mastodon.rs  mastodon_authorization.rs  mastodon_credentials.rs  mastodon_instance.rs  mastodon_marker.rs  mastodon_media.rs  mastodon_post_with_media.rs  mastodon_post_with_schedule.rs  mastodon_relationship.rs  (+33 more)
src/: default.rs  detector.rs  error.rs  lib.rs  megalodon.rs  oauth.rs  response.rs  streaming.rs  tls.rs
src/entities/: account.rs  activity.rs  announcement.rs  application.rs  async_attachment.rs  attachment.rs  card.rs  context.rs  conversation.rs  emoji.rs  featured_tag.rs  field.rs  filter.rs  follow_request.rs  history.rs  identity_proof.rs  instance.rs  list.rs  marker.rs  mention.rs  mod.rs  notification.rs  poll.rs  poll_option.rs  preferences.rs  push_subscription.rs  quote.rs  quote_approval.rs  reaction.rs  relationship.rs  report.rs  results.rs  role.rs  scheduled_status.rs  source.rs  stats.rs  status.rs  status_params.rs  status_source.rs  tag.rs  (+2 more)
src/firefish/: api_client.rs  firefish.rs  mod.rs  oauth.rs  web_socket.rs
src/firefish/entities/: account.rs  announcement.rs  app.rs  blocking.rs  created_note.rs  emoji.rs  favorite.rs  field.rs  file.rs  follow.rs  follow_request.rs  hashtag.rs  instance.rs  list.rs  meta.rs  mod.rs  mute.rs  note.rs  notification.rs  poll.rs  preferences.rs  reaction.rs  relation.rs  session.rs  stats.rs  user.rs  user_detail.rs
src/friendica/: api_client.rs  friendica.rs  mod.rs  web_socket.rs
src/friendica/entities/: account.rs  activity.rs  attachment.rs  card.rs  emoji.rs  filter.rs  follow_request.rs  history.rs  identity_proof.rs  instance.rs  list.rs  marker.rs  mod.rs  notification.rs  poll_option.rs  relationship.rs  report.rs  status.rs  status_params.rs  urls.rs
src/gotosocial/: api_client.rs  gotosocial.rs  mod.rs  oauth.rs  web_socket.rs
src/gotosocial/entities/: account.rs  attachment.rs  card.rs  context.rs  emoji.rs  field.rs  instance.rs  list.rs  marker.rs  mention.rs  mod.rs  notification.rs  poll.rs  poll_option.rs  preferences.rs  relationship.rs  report.rs  results.rs  role.rs  scheduled_status.rs  source.rs  stats.rs  status.rs  status_params.rs  status_source.rs  tag.rs  token.rs  urls.rs
src/mastodon/: api_client.rs  mastodon.rs  mod.rs  oauth.rs  web_socket.rs
src/mastodon/entities/: account.rs  activity.rs  announcement.rs  application.rs  attachment.rs  card.rs  context.rs  conversation.rs  emoji.rs  field.rs  filter.rs  history.rs  instance.rs  list.rs  marker.rs  mention.rs  mod.rs  notification.rs  poll.rs  preferences.rs  push_subscription.rs  quote.rs  quote_approval.rs  reaction.rs  relationship.rs  report.rs  results.rs  role.rs  scheduled_status.rs  source.rs  status.rs  status_params.rs  status_source.rs  tag.rs  token.rs  urls.rs
src/pixelfed/: mod.rs  oauth.rs  pixelfed.rs  web_socket.rs
src/pixelfed/entities/: account.rs  announcement.rs  attachment.rs  emoji.rs  field.rs  instance.rs  mod.rs  poll.rs  preferences.rs  scheduled_status.rs  stats.rs  status.rs  tag.rs  token.rs
src/pleroma/: api_client.rs  mod.rs  oauth.rs  pleroma.rs  web_socket.rs
src/pleroma/entities/: account.rs  announcement.rs  application.rs  attachment.rs  card.rs  context.rs  conversation.rs  emoji.rs  featured_tag.rs  filter.rs  history.rs  identity_proof.rs  instance.rs  list.rs  marker.rs  mention.rs  mod.rs  notification.rs  poll_option.rs  preferences.rs  reaction.rs  relationship.rs  report.rs  results.rs  scheduled_status.rs  source.rs  stats.rs  status.rs  status_params.rs  tag.rs
src/sharkey/: api_client.rs  mod.rs  oauth.rs  sharkey.rs  web_socket.rs
src/sharkey/entities/: app.rs  created_note.rs  custom_emoji.rs  emoji.rs  favorite.rs  file.rs  hashtag.rs  instance.rs  list.rs  mod.rs  mute.rs  note.rs  notification.rs  poll.rs  reaction.rs  relation.rs  user.rs  user_detail.rs
