[package]
name = "megalodon"
version = "0.13.6"
edition = "2021"
authors = ["Akira Fukushima <h3.poteto@gmail.com>"]
description = "Mastodon and Pleroma API client library for Rust."
license = "MIT"
repository = "https://github.com/h3poteto/megalodon-rs"
homepage = "https://github.com/h3poteto/megalodon-rs"

[package.metadata.docs.rs]
features = ["native-tls", "rustls-tls"]

[features]
default = ["rustls-tls"]
native-tls = [
    "tokio-tungstenite/native-tls",
    "reqwest/native-tls",
    "oauth2/native-tls",
]
rustls-tls = [
    "tokio-tungstenite/rustls-tls-native-roots",
    "reqwest/rustls-tls",
    "oauth2/rustls-tls",
]

[dependencies]
async-trait = "0.1.80"
chrono = { version = ">=0.4.38", features = ["serde"] }
futures-util = ">=0.3.30"
hex = { version = "0.4" }
oauth2 = { version = "4.4" }
rand = "0.8"
regex = ">=1.10.4"
reqwest = { version = ">=0.12.3", features = [
    "json",
    "multipart",
    "stream",
], default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sha1 = { version = "0.10" }
thiserror = ">=1.0.58"
tokio = { version = ">=1.37.0", features = ["full"] }
tokio-tungstenite = { version = "0.23" }
tokio-util = { version = "0.7.10", features = ["codec"] }
tracing = "0.1.40"
url = "2.5.0"
urlencoding = { version = "2.1" }
uuid = { version = "1.8", features = ["v4"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
