[package]
name = "megalodon"
version = "1.2.1"
edition = "2021"
authors = ["Akira Fukushima <h3.poteto@gmail.com>"]
description = "Mastodon and Pleroma API client library for Rust."
license = "MIT"
repository = "https://github.com/h3poteto/megalodon-rs"
homepage = "https://github.com/h3poteto/megalodon-rs"

[package.metadata.docs.rs]
features = ["native-tls", "rustls-tls"]

[features]
default = ["rustls-tls"]
native-tls = [
    "tokio-tungstenite/native-tls",
    "reqwest/native-tls",
    "oauth2/native-tls",
]
rustls-tls = [
    "tokio-tungstenite/rustls-tls-native-roots",
    "reqwest/rustls-tls",
    "oauth2/rustls-tls",
    "dep:rustls",
    "dep:rustls-native-certs",
    "dep:rustls-pki-types",
]

[dependencies]
async-trait = "0.1.80"
chrono = { version = "0.4.38", features = ["serde"] }
futures-util = "0.3.30"
hex = "0.4"
mime_guess = "2.0"
oauth2 = "5.0"
rand = "0.10"
regex = "1.10.4"
reqwest = { version = "0.12.3", features = [
    "json",
    "multipart",
    "stream",
], default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sha1 = "0.10"
thiserror = "2.0.12"
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = { version = "0.27", features = ["url"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tracing = "0.1.40"
url = "2.5.0"
rustls = { version = "0.23", features = ["ring"], default-features = false, optional = true }
rustls-native-certs = { version = "0.8", optional = true }
rustls-pki-types = { version = "1", optional = true }
urlencoding = "2.1"
uuid = { version = "1.8", features = ["v4"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
